Begin revamping as a personal site

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,9 @@
           {% if page.title %}
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
           {% endif %}
-        {% endfor %}
+          {% endfor %}
+
+	<a class="page-link" href="https://nowling-lab.github.io/">Nowling Lab</a>
       </div>
     </nav>
 
