Use even lighter gray

--- a/mastodon-timeline.css
+++ b/mastodon-timeline.css
@@ -5,7 +5,7 @@
   height: calc(100% - 4rem);
   padding: 2rem 3rem;
   position: relative;
-  background: #eeeeee;
+  background: #f5f5f5;
 }
 
 .mt-timeline a:link,
