--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,6 +21,8 @@
           {% endfor %}
 
 	<a class="page-link" href="https://nowling-lab.github.io/">Nowling Lab</a>
+
+	<a class="page-link" href="https://msoe-dise-project.github.io/">MSOE DISE Project</a>
       </div>
     </nav>
 
