--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -69,8 +69,12 @@ ul, ol {
 li {
     > ul,
     > ol {
-         margin-bottom: 60px;
+         margin-bottom: 30px;
     }
+}
+
+li + li {
+	margin-top: 20px;
 }
 
 
